src/objects/Influence__c.object
<CustomObject>
    <fields>
        <fullName>ACD_Rank__c</fullName>
        <label>ACD Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIP_Rank__c</fullName>
        <label>AIP Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Interactions_Post__c</fullName>
        <formula>if(  Posts_Created__c &gt; 0, ( Comments_Received__c +  Likes_Received__c ) /  Posts_Created__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Interactions/Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Rank__c</fullName>
        <label>CC Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CR_Rank__c</fullName>
        <label>CR Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChatterRank__c</fullName>
        <formula>MAX( 100 - ( FLOOR(( Ranking__c * 100 ) / Influence_Parent__r.Total_Records__c )), 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ChatterRank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Comments Created</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments_Per_Day__c</fullName>
        <formula>if( Days_with_Comments__c &gt; 0, ( Comments_Received__c +  Likes_Received__c ) /  Days_with_Comments__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Interactions/Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Comments Received</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_with_Comments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days with Comments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_Rank__c</fullName>
        <label>F Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Followers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Followers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Influence_Formula__c</fullName>
        <formula>( ( 40 * ( Influence_Parent__r.Total_Records__c -  AIP_Rank__c ) ) + ( 25 * ( Influence_Parent__r.Total_Records__c -  PR_Rank__c ) ) + ( 20 * ( Influence_Parent__r.Total_Records__c -  ACD_Rank__c ) ) + ( 10 * ( Influence_Parent__r.Total_Records__c -  F_Rank__c ) ) + ( 5 * ( Influence_Parent__r.Total_Records__c -  CC_Rank__c ) ) / 100 ) / Influence_Parent__r.Total_Records__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence Formula</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Influence_Parent__c</fullName>
        <label>Influence Parent</label>
        <referenceTo>Influence_Parent__c</referenceTo>
        <relationshipName>Influence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Latest_Comment__c</fullName>
        <label>Latest Comment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Likes_Received_Rank__c</fullName>
        <label>Likes Received Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likes_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Likes Received</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Rank__c</fullName>
        <label>PC Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PR_Rank__c</fullName>
        <label>PR Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posts_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Posts Created</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posts_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Posts Received</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Influence</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Influence</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Influence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Influences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>